[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/boy/boy_back_2.png" type="Texture" id=1]
[ext_resource path="res://assets/boy/boy_idle_2.png" type="Texture" id=2]
[ext_resource path="res://assets/boy/boy_right_3.png" type="Texture" id=3]
[ext_resource path="res://assets/boy/boy_idle_3.png" type="Texture" id=4]
[ext_resource path="res://assets/boy/boy_right_2.png" type="Texture" id=5]
[ext_resource path="res://scene/lamp.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/boy/boy_back_1.png" type="Texture" id=7]
[ext_resource path="res://assets/boy/boy_left_2.png" type="Texture" id=8]
[ext_resource path="res://assets/boy/boy_front_2.png" type="Texture" id=9]
[ext_resource path="res://assets/boy/boy_left_1.png" type="Texture" id=10]
[ext_resource path="res://assets/boy/boy_right_1.png" type="Texture" id=11]
[ext_resource path="res://assets/boy/boy_back_3.png" type="Texture" id=12]
[ext_resource path="res://assets/boy/boy_front_3.png" type="Texture" id=13]
[ext_resource path="res://assets/boy/boy_front_1.png" type="Texture" id=14]
[ext_resource path="res://assets/boy/boy_left_3.png" type="Texture" id=15]
[ext_resource path="res://scene/ActionArea.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/background.png" type="Texture" id=17]
[ext_resource path="res://scene/units/BoyLampTimer.gd" type="Script" id=18]
[ext_resource path="res://scripts/Boy.gd" type="Script" id=19]
[ext_resource path="res://assets/boy/boy_die.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 15 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 12 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 9 ), ExtResource( 13 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 14.9373 )

[node name="Boy" type="KinematicBody2D" groups=[
"boy",
]]
collision_layer = 2
collision_mask = 32778
script = ExtResource( 19 )
speed = 50

[node name="lamp" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 0.477325 )
texture = ExtResource( 17 )

[node name="Animation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
script = ExtResource( 18 )

[node name="ActionArea" parent="." instance=ExtResource( 16 )]
scale = Vector2( 1.07148, 0.964517 )
[connection signal="on_disabled" from="lamp" to="." method="_on_lamp_on_disabled"]
[connection signal="on_disabled" from="lamp" to="Timer" method="_on_lamp_on_disabled"]
[connection signal="on_enabled" from="lamp" to="Timer" method="_on_lamp_on_enabled"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
